Fix Drop Duplicates function

--- a/data_wrangling_project_template.ipynb
+++ b/data_wrangling_project_template.ipynb
@@ -2090,30 +2090,6 @@
        "      <td>1080.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>25.00</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>6.00</td>\n",
-       "      <td>6.00</td>\n",
-       "      <td>6.00</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1079.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>24.00</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>6.00</td>\n",
-       "      <td>6.00</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>1.12</td>\n",
-       "      <td>1080.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>11</td>\n",
        "      <td>21.00</td>\n",
@@ -2124,18 +2100,6 @@
        "      <td>4.00</td>\n",
        "      <td>6.00</td>\n",
        "      <td>779.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>12</td>\n",
-       "      <td>20.00</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>2.05</td>\n",
-       "      <td>10.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>944.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -2174,18 +2138,6 @@
        "      <td>1081.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>23.00</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>6.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>6.00</td>\n",
-       "      <td>6.00</td>\n",
-       "      <td>1080.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>16</td>\n",
        "      <td>15.00</td>\n",
@@ -2222,28 +2174,16 @@
        "      <td>871.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>22.00</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>6.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>8.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1004.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>mean</th>\n",
        "      <td>19</td>\n",
-       "      <td>21.88</td>\n",
-       "      <td>4.33</td>\n",
-       "      <td>5.33</td>\n",
-       "      <td>4.75</td>\n",
-       "      <td>2.05</td>\n",
-       "      <td>5.81</td>\n",
-       "      <td>1.12</td>\n",
-       "      <td>1107.04</td>\n",
+       "      <td>21.63</td>\n",
+       "      <td>4.32</td>\n",
+       "      <td>5.37</td>\n",
+       "      <td>4.89</td>\n",
+       "      <td>2.01</td>\n",
+       "      <td>5.76</td>\n",
+       "      <td>1.04</td>\n",
+       "      <td>1125.37</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2263,19 +2203,14 @@
        "8      8        22.00      4.00       4.00      6.00      0.00       8.00   \n",
        "9      9        22.00      5.00       8.00      6.00      3.00       5.81   \n",
        "10    10        21.00      5.00      10.00      6.00      2.05       5.81   \n",
-       "4      4        25.00      5.00       6.00      6.00      6.00       2.00   \n",
-       "5      5        24.00      5.00       6.00      6.00      3.00       4.00   \n",
        "11    11        21.00      4.00       4.00      3.00      0.00       4.00   \n",
-       "12    12        20.00      3.00       4.00      3.00      2.05      10.00   \n",
        "13    13        17.00      4.00       4.00      6.00      3.00       0.00   \n",
        "14    14        17.00      5.00       4.00      3.00      3.00       2.00   \n",
        "15    15        16.00      3.00       6.00      3.00      0.00       4.00   \n",
-       "6      6        23.00      5.00       6.00      0.00      0.00       6.00   \n",
        "16    16        15.00      4.00       2.00      3.00      0.00       6.00   \n",
        "17    17        13.00      3.00       4.00      6.00      2.05       5.81   \n",
        "18    18        13.00      3.00       4.00      6.00      0.00       0.00   \n",
-       "8      8        22.00      4.00       4.00      6.00      0.00       8.00   \n",
-       "mean  19        21.88      4.33       5.33      4.75      2.05       5.81   \n",
+       "mean  19        21.63      4.32       5.37      4.89      2.01       5.76   \n",
        "\n",
        "      Q.6/6.00     time  \n",
        "0         0.00   856.00  \n",
@@ -2290,19 +2225,14 @@
        "8         0.00  1004.00  \n",
        "9         1.12  1081.00  \n",
        "10        1.12  1080.00  \n",
-       "4         0.00  1079.00  \n",
-       "5         1.12  1080.00  \n",
        "11        6.00   779.00  \n",
-       "12        0.00   944.00  \n",
        "13        1.12  1081.00  \n",
        "14        0.00  1080.00  \n",
        "15        1.12  1081.00  \n",
-       "6         6.00  1080.00  \n",
        "16        0.00  2919.00  \n",
        "17        1.12  1081.00  \n",
        "18        0.00   871.00  \n",
-       "8         0.00  1004.00  \n",
-       "mean      1.12  1107.04  "
+       "mean      1.04  1125.37  "
       ]
      },
      "execution_count": 9,
@@ -2330,7 +2260,7 @@
     "        \n",
     "        \n",
     "    # Drop the duplicate\n",
-    "    df = df.loc[:, ~df.columns.duplicated()]\n",
+    "    df = df.drop_duplicates()\n",
     "    \n",
     "    df.loc['mean'] = df.loc[:, df.columns != 'id'].mean().round(2)\n",
     "    \n",
@@ -2431,7 +2361,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11f338eb8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11a4b1860>"
       ]
      },
      "execution_count": 11,
@@ -2587,7 +2517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {
     "hideCode": false,
     "hidePrompt": true
@@ -2641,7 +2571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {
     "hideCode": false,
     "hidePrompt": true
@@ -2691,7 +2621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {
     "hideCode": false,
     "hidePrompt": true
@@ -2708,7 +2638,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2747,7 +2677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {
     "hideCode": false,
     "hidePrompt": true
@@ -2771,7 +2701,7 @@
       "test_Q13_function (__main__.TestNotebook) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 12 tests in 0.085s\n",
+      "Ran 12 tests in 0.143s\n",
       "\n",
       "OK\n"
      ]
@@ -2779,10 +2709,10 @@
     {
      "data": {
       "text/plain": [
-       "<unittest.main.TestProgram at 0x11beb22b0>"
+       "<unittest.main.TestProgram at 0x11a946358>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
